Level slices pieced together correctly now

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kirby's Dreamland 2 Level Viewer</title>
-    <script src="/view.js"></script>
+    <script src="kdl2v.js"></script>
   </head>
   <body>
     <input id="kirbyLevelFile" type="file"/>
