Actually use the transpiled code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kirby's Dreamland 2 Level Viewer</title>
-    <script src="kdl2v.js"></script>
+    <script src="kdl2v_babel.js"></script>
   </head>
   <body>
     <h1>Kirby's Dreamland 2 Level Viewer</h1>
