More babel transpilation

--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <br/>
     <br/>
     <canvas id="viewer" width="2000" height="2000">Does not support canvas</canvas>
-    <script type="text/javascript" src="ui.js"></script>
+    <script type="text/javascript" src="ui_babel.js"></script>
   </body>
 </html>
