Optimized rendering - much faster now.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Kirby's Dreamland 2 Level Viewer</title>
-    <script src="kdl2v_babel.js"></script>
+    <script src="kdl2v.js"></script>
   </head>
   <body>
     <h1>Kirby's Dreamland 2 Level Viewer</h1>
@@ -17,6 +17,6 @@
     <br/>
     <br/>
     <canvas id="viewer" width="2000" height="2000">Does not support canvas</canvas>
-    <script type="text/javascript" src="ui_babel.js"></script>
+    <script type="text/javascript" src="ui.js"></script>
   </body>
 </html>
