Credit huderlem for KDL1 support

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html>
   <head>
-    <title>Kirby's Dreamland 2 Level Viewer</title>
+    <title>Kirby's Dreamland 1 & 2 Level Viewer</title>
     <script src="kdl2v.js"></script>
   </head>
   <body>
     <h1>Kirby's Dreamland 2 Level Viewer</h1>
-    <h4>Brought to you by lf94 (ircsurfer33@gmail.com)</h4>
+    <h4>Brought to you by lf94</h4>
     <p>Browse for your Kirby's Dreamland 2 (tm) ROM and click "Open", then select a level to load and press "Render".</p>
     <input id="kdl2File" type="file"/>
     <button id="kdl2ExecuteBtn">Open</button>
@@ -19,7 +19,7 @@
     <canvas id="kdl2Viewer">Does not support canvas</canvas>
 
     <h1>Kirby's Dreamland Level Viewer</h1>
-    <h4>Brought to you by lf94 (ircsurfer33@gmail.com)</h4>
+    <h4>Brought to you by huderlem</h4>
     <p>Browse for your Kirby's Dreamland (tm) ROM and click "Open", then select a level to load and press "Render".</p>
     <input id="kdlFile" type="file"/>
     <button id="kdlExecuteBtn">Open</button>
